--- a/templates/base.html
+++ b/templates/base.html
@@ -1,16 +1,36 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
-        <link type="text/css" rel="stylesheet" href="/static/main.css" />
-        <title></title>
-    </head>
-    
-    <body>
-    
+
+<head>
+    <link type="text/css" rel="stylesheet" href="/static/main.css" />
+    <title>That's Not My...</title>
+</head>
+
+<body>    
+    <div class="header">
+        <div class="controls">
+            {% if user %}
+                {{user.name}} (<a class="gray-link" href="/logout">logout</a>)
+            {% else %}
+                <a class="gray-link" href="/login">login</a>
+                |
+                <a class="gray-link" href="/signup">signup</a>
+            {% endif %}
+        </div>
+        
+        <div class="controls">  
+            {% block controls %}
+            {% endblock %}
+        </div>
+        
+    </div>
+        
+    <div id="content">
         {% block content %}
         {% endblock %}
-
-    </body>
+    </div>
+    
+</body>
     
 </html>
