--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,9 @@
 <html>
 
 <head>
+    <meta http-equiv='content-type' content='text/html; charset=UTF-8'>
     <link type="text/css" rel="stylesheet" href="/static/main.css" />
+    <script type="text/javascript" src="/static/script.js"></script>
     <title>That's Not My...</title>
 </head>
 
