Added home button, memcache, and removed default values

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
     <div class="header">
         <div class="controls">
             {% if user %}
-                <a class="gray-link" href="/stories">{{user.name}}</a>
+                {{user.name}}
                 (<a class="gray-link" href="/logout">logout</a>)
             {% else %}
                 <a class="gray-link" href="/login">login</a>
@@ -21,6 +21,12 @@
                 <a class="gray-link" href="/signup">signup</a>
             {% endif %}
         </div>        
+        
+        <div class="controls">
+            {% block controls %}
+            {% endblock %}
+        </div>
+        
     </div>
 
     <div id="content">
