--- a/templates/stories.html
+++ b/templates/stories.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block controls %}
+    <a class="gray-link" href="/">home</a>
+{% endblock %}
+
 {% block content %}
 <h2>Your Stories</h2>
 <table class="story-table">
