--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 
-Login
+{% block controls %}
+    <a class="gray-link" href="/">home</a>
+{% endblock %}
 
 {% block content %}
 <h2>Login</h2>
