--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 
-Signup
+{% block controls %}
+    <a class="gray-link" href="/">home</a>
+{% endblock %}
 
 {% block content %}
 <h2>Signup</h2>
