--- a/templates/login.html
+++ b/templates/login.html
@@ -32,6 +32,6 @@
   </div>
 
   <input type="hidden" name="next_url" value="{{next_url}}">
-  <input type="submit">
+  <input class="btn" type="submit">
 </form>
 {% endblock %}
