--- a/templates/story.html
+++ b/templates/story.html
@@ -18,9 +18,9 @@
       </form>
     </div>
 
-    <input type="button" onClick="printDiv('print-content')" value="Print"/>
+    <input class="btn" type="button" onClick="printDiv('print-content')" value="Print"/>
     
     <a id="create-story" href="/">
-        <input type="button" value="Create Another Story">
+        <input class="btn" type="button" value="Create Another Story">
     </a>
 {% endblock %}
