--- a/templates/signup.html
+++ b/templates/signup.html
@@ -59,6 +59,6 @@
   </table>
 
   <input type="hidden" name="next_url" value="{{next_url}}">
-  <input type="submit">
+  <input class="btn" type="submit">
 </form>
 {% endblock %}
